--- a/index.html
+++ b/index.html
@@ -47,33 +47,33 @@
         <div class="rate">
           <div class="rate__container">
             <div class="image">
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
             </div>
             <h2 class="rate__reviews">Rated 5 Stars in Reviews</h2>
           </div>
 
           <div class="rate__container">
             <div class="image">
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
             </div>
             <h2 class="rate__report">Rated 5 Stars in Report Guru</h2>
           </div>
 
           <div class="rate__container">
             <div class="image">
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
-              <img src="/images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
             </div>
             <h2 class="rate__tech">Rated 5 Stars in BestTech</h2>
           </div>
